--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: linux-scrubber
-        path:
-          - scrubber
+        path: scrubber
 
     - name: Build Windows
       run: GOOS=windows GOARCH=amd64 go build -v -o scrubber.exe cmd/cli.go
@@ -33,5 +32,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: windows-scrubber
-        path: 
-          - scrubber.exe
+        path: scrubber.exe
