--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI
+name: deploy
 
 on:
   push:
@@ -22,8 +22,8 @@ jobs:
     - name: Upload Linux Build Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: scrubber
-        path: scrubber
+        name: scrapper 
+        path: scrapper
 
     - name: Upload Linux Runner Artifact
       uses: actions/upload-artifact@v4
@@ -37,8 +37,8 @@ jobs:
     - name: Upload Windows Build Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: scrubber.exe
-        path: scrubber.exe
+        name: scrapper.exe
+        path: scrapper.exe
 
     - name: Upload Windows Script Artifact
       uses: actions/upload-artifact@v4
